--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "moongose": "^1.0.0"
+    "moongose": "^1.0.0",
+    "password-validator": "^5.3.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
